--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
 <body>
     <form>
         <header class="header">
-            <h1 class="header__title">FOOD100</h1>
-            <p class="header__descr">FAST FOOD 100 уровня</p>
-            <div class="header__timer">
-                <span class="header__timer-extra">0</span> LVL
-            </div>
+            <h1 class="header__title">THE MENU OF FIVE GUYS</h1>
             <!-- 
                  ДЗ
                  При помощи рекурсии сделать анимированный логотип. Цифры от 0 до 100. При этом когда цифра больше 50 скороть изменения становится меньше 
